# best-of-n-MPC-CEM-latent-world-models

./: .gitignore  PAPER.md  README.md  pyproject.toml
docs/: claims.json  final_audit.md  novelty_map.md  proof_attack.md  theory.md
experiments/: 19_v4_gymnasium_cem_cards.py  __init__.py  controlled_toy.py  learned_ensemble.py  sweeps.py  v3_cached_evidence.py  v4_protocol_evidence.py
paper/: claims_table.md  main.md  paper.md
paper/final/: best-of-n-MPC-CEM-latent-world-models-v4-manifest.json
paper/iclr_submission/: appendix.tex  main.tex  references.bib  v3_results_macros.tex  v4_gymnasium_macros.tex  v4_results_macros.tex
results/controlled/: closed_loop.csv  controlled_rollouts.csv  controlled_summary.json  controlled_traces.csv
results/learned_ensemble/: learned_rollouts.csv  learned_summary.json  learned_traces.csv
results/smoke/: closed_loop.csv  controlled_rollouts.csv  controlled_summary.json  controlled_traces.csv
results/sweeps/: cem_sweep.csv  repair_gain.csv
results/v3_cached_evidence/: cem_trace_progression.csv  controlled_rollout_audit.csv  learned_planner_table.csv  sweep_summary.csv
results/v4_gymnasium_cem_cards/: benchmark_effects.csv  candidate_records.csv  selection_curves.csv  summary.json
results/v4_protocol_evidence/: closed_loop_table.csv  controlled_planner_table.csv  summary.json  (+2 more)
scripts/: build_v3_paper.py  build_v4_paper.py  run_all.ps1  run_all.sh  run_claim_audit.py  run_smoke.ps1  run_smoke.sh  run_v3_claim_audit.py  run_v4_claim_audit.py
tests/: test_metrics.py  test_planners.py  test_repairs_no_leakage.py
(+11 files in other folders)
